local tictactoe board CSS fixed, aligns to center and readjusts size as VW changes

--- a/src/Components/LocalTicTacToe/LocalTicTacToe.css
+++ b/src/Components/LocalTicTacToe/LocalTicTacToe.css
@@ -11,26 +11,31 @@ ul {
     padding-left: 30px;
 }
   
-.status {
+.tttLocalStatus {
     margin-bottom: 10px;
     color: white;
+    margin-left: -79.3vw;
 }
   
-.block {
+.square {
     background: rgb(38, 169, 212);
     border: 1px solid black;
     float: left;
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 100px;
+    height: 6.944444444444445vw;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 100px;
+    width: 6.944444444444445vw;
 }
-  
+.tttBoard {
+    width: 100vw;
+    margin-left: -5.5vw;
+
+}
 .game {
     display: flex;
     flex-direction: row;
